[network] Fix low contrast initiator link
- it fixes the link contrast in Performance panel > Bottom tabs too as they are using the same data grid

Screenshot: https://crbug.com/1470535#c1

Fixed: 1470535
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4813874
Commit-Queue: Jecelyn Yeen <jec@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -246,7 +246,7 @@
 }
 
 .data-grid:focus tr.selected .devtools-link {
-  color: var(--color-selected-option);
+  color: var(--sys-color-on-tonal-container);
 }
 
 .data-grid:focus tr.parent.selected td.disclosure::before {
